# RenaissancePatcher

./: .gitignore  RenaissancePatcher.sln  RenaissancePatcher.vc08.sln  readme.md
Release Inj/: RenaissanceInjector.exp  RenaissanceInjector.lib
RenaissanceInjector/: README.md  RenaissanceInjector.vcxproj  RenaissanceInjector.vcxproj.filters  dllmain.cpp
RenaissanceInjector/Release Inj/Renaissa.00659c4a.tlog/: CL.command.1.tlog  CL.read.1.tlog  link.read.1.tlog  link.write.1.tlog
RenaissancePatch/: .gitignore  CMakeLists.txt  README.md  RenaissancePatch.vc08.vcproj  RenaissancePatch.vc17.vcxproj  dllmain.cpp
RenaissancePatch/Debug Inj/: vc141.idb
RenaissancePatch/Debug Inj/Renaissa.00659c4a.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RenaissanceInjector.lastbuildstate  RenaissanceInjector.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RenaissancePatch/Release Inj/Renaissa.00659c4a.tlog/: CL.write.1.tlog  RenaissanceInjector.lastbuildstate  RenaissanceInjector.write.1u.tlog  link.command.1.tlog
RenaissancePatch/lib/: MinHook.x86.lib
RenaissancePatcher/: FormMain.Designer.cs  FormMain.cs  FormMain.resx  Program.cs  RenaissancePatcher.csproj  RenaissancePatcher.vc08.csproj  RenaissancePatcher.vcproj  packages.config
RenaissancePatcher/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
